[gd_scene load_steps=7 format=2]

[ext_resource path="res://enemy/enemy.gd" type="Script" id=1]
[ext_resource path="res://weapon/tump_gun/metal.material" type="Material" id=2]

[sub_resource type="CapsuleMesh" id=1]
radius = 1.25
mid_height = 1.5

[sub_resource type="SpatialMaterial" id=4]
flags_unshaded = true
albedo_color = Color( 0.0509804, 0.588235, 0.0509804, 1 )

[sub_resource type="CubeMesh" id=2]

[sub_resource type="CapsuleShape" id=3]
radius = 1.25
height = 1.5

[node name="enemy" type="KinematicBody"]
script = ExtResource( 1 )

[node name="body" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 4 )

[node name="MeshInstance2" type="MeshInstance" parent="."]
transform = Transform( 0.153969, 0, 0, 0, 0.191334, 0, 0, 0, 0.579069, 0.029336, 0.104996, -1.37687 )
mesh = SubResource( 2 )
material/0 = ExtResource( 2 )

[node name="barrel" type="Position3D" parent="MeshInstance2"]

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 3 )

[node name="Area" type="Area" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, -1.4476 )

[node name="CollisionPolygon" type="CollisionPolygon" parent="Area"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
polygon = PoolVector2Array( 0, 0, 15, 6, 15, -6 )

[node name="fire_Timer" type="Timer" parent="."]
wait_time = 0.2

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
[connection signal="timeout" from="fire_Timer" to="." method="_on_fire_Timer_timeout"]
